--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.7.7",
     "multer": "^1.4.2",
+    "node-cmd": "^3.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^11.1.0"
